--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+@media only screen and (max-width: 1199px) {
+  .Textarea {
+    width: 100%;
+  }
+  .OutputArea {
+    margin-top: 25px;
+    margin-left: 0px;
+    margin-bottom: 50px;
+    max-width: 800px;
+  }
+}
