--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-body {
+.body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  background-color: gray;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -12,6 +12,7 @@ body {
     margin-top: 25px;
     margin-left: 0px;
     margin-bottom: 50px;
+    margin-right: 25px;
     max-width: 800px;
   }
 }
