--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 .body {
-  margin: 0;
-  padding: 0;
   background-color: gray;
 }
 
-@media only screen and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .Textarea {
     width: 100%;
   }
